[package]
name = "mini_lms"
version = "0.1.0"
edition = "2021"
authors = ["Amir Alesheikh <amirhossein.alesheikh@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mini_lms"

[dependencies]
axum = "0.5.17"
log = "0.4.17"
tokio = { version = "1.22.0", features = ["full"] }
